plugins {
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot
    id 'org.springframework.boot' version '3.0.4'
    // https://mvnrepository.com/artifact/io.spring.dependency-management/io.spring.dependency-management.gradle.plugin
    id 'io.spring.dependency-management' version '1.1.0'
    // https://mvnrepository.com/artifact/org.asciidoctor.jvm.convert/org.asciidoctor.jvm.convert.gradle.plugin
    id "org.asciidoctor.jvm.convert" version "3.3.2"
    id 'java'
}

group = 'cn.sbx0.todo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.17'

configurations {
    asciidoctorExt
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.flywaydb:flyway-mysql'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    runtimeOnly 'com.mysql:mysql-connector-j'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testRuntimeOnly 'com.h2database:h2'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    configurations 'asciidoctorExt'
    dependsOn test
}

task cleanExtLib(type: Delete) {
    delete "$buildDir/libs/dependency"
}

task copyExtLib(type: Copy) {
    into "$buildDir/libs/dependency"
    from configurations.default
}

bootJar {
    excludes = ["*.jar"]

    dependsOn cleanExtLib
    dependsOn copyExtLib

    manifest {
        attributes "Manifest-Version": 1.0, 'Class-Path': configurations.default.files.collect { "./dependency/$it.name" }.join(' ')
    }
}
